--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -15,6 +15,9 @@
                 <h1 class="name">Humza Raees</h1>
                 <p class="title">Developer</p>
             </div>
+        </div>
+        <div class="tdiv">
+            
         </div>
     </div>
 </body>
