--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
             </div>
         </div>
         <div class="tdiv">
-            
+            <br>
+            <br>
+            <hr class="topline">
+            <div class="about">about me</div>
+            <br>
+            <div class="age">28 years &nbsp; <span>&#47;</span> &nbsp; Lviv &nbsp; <span>&#47;</span> &nbsp; Freelance</div>
+            <br>
+            <div class="description">Prolific, full stack web developer with a passion for metrics and 
+                beating former <br>&quot;best-yets.&quot; Prototyped 25 new product features per year for Flexor,
+                Inc. Decreased <br> rework by 22% and costs by 15%. Consistently receive high user experience
+                scores<br> for  all web development projects, including a 55% increase for Flexor, Inc.
+                <br>Passionate  about  building world class web applications. One of my sites received a  <br>2015 
+                Webby for Best Navigation and Structure.
+            </div>
+            <br>
+            <hr class="centerline">
+            <br>
+            <div class="myservices">my services</div>
         </div>
     </div>
 </body>
