--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
@@ -35,6 +36,38 @@
             <hr class="centerline">
             <br>
             <div class="myservices">my services</div>
+            <br>
+            <div class="dev">
+                <div><i class="fa fa-tv fa-lg" style="color:seagreen;"></i></div>
+                <br>
+                <div class="development">development</div>
+                <br>
+                <div class="span">Building a custom tailored solution <br> based on your technical <br> specification. </div>
+                <br>
+                <div><i class="fa fa-copy fa-lg" style="color:seagreen;"></i></div>
+                <br>
+                <div class="development">data base</div>
+                <br>
+                <div class="span">SSL certificate installation and <br> configuration, redirection for the configuration  on your  website. </div>
+            </div>
+            <div class="dev2">
+                <div><i class="	fa fa-file-excel-o fa-lg" style="color:seagreen;"></i></div>
+                <br>
+                <div class="development">SEO optimization</div>
+                <br>
+                <div class="span">
+                <div class="span">Audit your website, perform technical <br> improvements and write meta <br> tags. </div>
+                <br>
+                <div><i class="	fa fa-eye fa-lg" style="color:seagreen;"></i></div>
+                <br>
+                <div class="development">data security</div>
+                <br>
+                <div class="span">
+                <div class="span">Strategy with leading data protection <br> technology to safeguard your critical <br> data.</div>
+            </div>
+            <br>
+            <br>
+            <hr class="bottomline">
         </div>
     </div>
 </body>
