--- a/Avengers Website/index.html
+++ b/Avengers Website/index.html
@@ -96,7 +96,7 @@
         .photo{
             width: 293px;
     height: 331px;
-    background-image: url(b2.jpg);
+    background-image: url(b2.JPG);
     background-size: cover;
     position: relative;
     left: 202px;
